feature: User following.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # Enabling H2 Console
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
 
 spring.jpa.open-in-view=false
 
-net.csust.webo.jwtSecret="去遇见自由之音吧！"
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+net.csust.webo.jwtSecret="日常中小小的一隅也好，奇妙的幻想也罢；若是嘴边哼起歌谣，世界便一定会充满乐趣吧！"
