feature: change password and change user info.
Signed-off-by: Hillium <maruruku@stu.csust.edu.cn>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.open-in-view=false
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-net.csust.webo.jwtSecret="日常中小小的一隅也好，奇妙的幻想也罢；若是嘴边哼起歌谣，世界便一定会充满乐趣吧！"
+# suppress inspection "SpringBootApplicationProperties"
+net.csust.webo.jwtSecret="日常中小小的一隅也好，奇妙的幻想也罢；若是嘴边哼起歌谣，在风中轻轻歌唱，世界便一定会充满乐趣吧！"
